@@ -14,6 +14,8 @@
       exit code if the code exited. [rt.cpan.org 12310]
     - is_deeply() diagnostics now disambiguate between stringified references
       and references. [rt.cpan.org 8865]
+    - Files opened by the output methods are now autoflushed.
+    - todo() now honors $Level when looking for $TODO.
 
 0.54  Wed Dec 15 04:18:43 EST 2004
     * $how_many is optional for skip() and todo_skip().  Thanks to 
